[package]
name = "rbb"
version = "0.1.0"
authors = ["mokou <mokou@posteo.de>"]
edition = "2018"

[dependencies]
tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }
driftwood = "0.0.5"
askama_tide = "0.12.0"
askama = "0.10.5"
comrak = "0.8.2"
walkdir = "2.3.1"
dotenv = "0.15.0"
